--- a/Ethereal Cloud/Pages/Register.cshtml
+++ b/Ethereal Cloud/Pages/Register.cshtml
@@ -139,7 +139,7 @@
             window.open(termsUrl, "_blank", "width=800,height=600,top=350");
         }
 
-        var low = /(?=.*[a-z])/;
+        var low = /(?=.*[a-zA-Z\d!#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?])/;
         var med = /(?=.*[a-z])(?=.[A-Z])/
         var high = /(?=.*[a-z])(?=.[A-Z])(?=.*\d){10,}/
         var highest = /(?=.*[a-z])(?=.[A-Z])(?=.*\d)(?=.*[!#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?]){10,}/
