--- a/Ethereal Cloud/Pages/Register.cshtml
+++ b/Ethereal Cloud/Pages/Register.cshtml
@@ -139,13 +139,21 @@
             window.open(termsUrl, "_blank", "width=800,height=600,top=350");
         }
 
+        //Low means it contains 1 of any characters in the available set
         var low = /(?=.*[a-zA-Z\d!#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?])/;
-        var med = /(?=.*[a-z])(?=.*[A-Z])/;
-        var high = /(?=.*[a-z])(?=.*[A-Z])(?=.*[\d!#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?]).{10,}/;
+
+        //med needs to at least contain 1 lower and any 1 of any other character at a min length of 6 characters
+        var med = /(?=.*[a-z])(?=.*[A-Z\d!#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?]).{6,}/;
+
+        //high needs to contain at least 1 lower, 1 upper and 1 of any other character at a min length of 8 characters
+        var high = /(?=.*[a-z])(?=.*[A-Z])(?=.*[\d!#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?]).{8,}/;
+
+        //highest needs to contain at least 1 lower, 1 upper, 1 number and 1 special character at a min length of 10 characters
         var highest = /(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[!#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?]).{10,}/;
         function passStrengthCheck() {
             var password = document.getElementById('Password').value;
             if (highest.test(password)) {
+                //inside these parts is where the progress bar would need to change to match the console log colour given
                 console.log("green full");
                 return;
             }
