Centered content on upload page and removed old code

--- a/Ethereal Cloud/Pages/Shared/_Layout.cshtml
+++ b/Ethereal Cloud/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 
                 <!-- Links on left side -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-pages">
+                    <ul class="navbar-nav me-auto mb-2 mb-mg-0 nav-pages">
 
                         <li class="nav-item">
                             <a class="nav-link" href="/Upload">Upload</a>
