--- a/Ethereal Cloud/Pages/PrivacyPolicy.cshtml
+++ b/Ethereal Cloud/Pages/PrivacyPolicy.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     Layout = null;
+    <link rel="stylesheet" href="/css/Policies.css" asp-append-version="true">
 
     <div class="container mt-3">
 
