--- a/Ethereal Cloud/Pages/Register.cshtml
+++ b/Ethereal Cloud/Pages/Register.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="/css/Site.css" asp-append-version="true">
     <link rel="stylesheet" href="/css/Login.css" asp-append-version="true">
+    <link rel="stylesheet" href="/css/Normalise.css" asp-append-version="true">
     <title>Register</title>
     Layout = null;
 
