--- a/Ethereal Cloud/Pages/Bin.cshtml
+++ b/Ethereal Cloud/Pages/Bin.cshtml
@@ -3,32 +3,11 @@
 @{
     ViewBag.Title = "Bin";
     Layout = "Shared/_Layout.cshtml";
-    <link rel="stylesheet" href="/css/Upload.css" asp-append-version="true">
     <link rel="stylesheet" href="/css/Bin.css" asp-append-version="true">
 }
 
-<div class="row mt-3">
-    <div id="toolbox" class="col-lg-1 col-md-2 col-sm-2">
-        <div id="tools" class="row">
-
-            <!-- Restore button -->
-            <div id="tool-row" onclick="toggleImage()">
-                <a id="tool-label">
-                    <img id="toggleImage" class="row" src="~/images/tools/search.svg" alt="Image 1">
-                </a>
-                <p class="row">Restore</p>
-            </div>
-
-            <!-- Delete button -->
-            <div id="tool-row">
-                <a id="tool-label">
-                    <img class="row" src="~/images/tools/trash.svg" alt="trash">
-                </a>
-                <p class="row">Delete</p>
-            </div>
-        </div>
-    </div>
-
+<!-- File explorer -->
+<div id="file-explorer" class="row mt-3">
     <!-- Files Box -->
     <div id="filebox" class="col-lg-11 col-md-10 col-sm-10 align-content-center">
         <div id="scrollbox" class="row">
