Cookie fixing in progress

--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -32,7 +32,7 @@
             <!-- Divider -->
             <div id="filepath-button" class="col">
                 <a>
-                    <img id="rotated-image" src="~/images/file-path/dash-lg.svg" alt="path">
+                    <img id="rotated-image" style="margin:0;" src="~/images/file-path/dash-lg.svg" alt="path">
                 </a>
             </div>
 
@@ -159,7 +159,8 @@
         //Cancels the folder creation
         function cancelFolderCreation() {
             document.getElementById('input-box').style.display = 'none';
-        }
+        }    
+                
     </script>
 
     string GetFileItemHandler(string fileHandler)
