--- a/Ethereal Cloud/Pages/Account.cshtml
+++ b/Ethereal Cloud/Pages/Account.cshtml
@@ -9,6 +9,12 @@
 <div class="row mt-3 align-content-center">
     <h2>Manage your account</h2>
     <div class="logout-button text-center">
-        <a href="/Login" class="btn btn-primary">Logout here!</a>
+        <a href="#" onclick="deleteAuthTokenCookie()" class="btn btn-primary">Logout here!</a>
     </div>
 </div>
+
+<script>
+    function deleteAuthTokenCookie() {
+        document.cookie = "AuthToken=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";        
+    }
+</script>
