--- a/Ethereal Cloud/Pages/Upload.cshtml
+++ b/Ethereal Cloud/Pages/Upload.cshtml
@@ -223,11 +223,19 @@
     }
 
 
+
+
     <!--RIGHT CLICK MENU-->
     <div id="contextMenu" class="dropdown">
         <a class="dropdown-item" id="downloadItem" href="#">Download</a>
         <a class="dropdown-item" id="deleteItem" href="#">Delete</a>
     </div>
+
+        <!-- Hidden form for delete action -->
+    <form id="deleteForm" method="post" asp-page-handler="Delete">
+        <input name="fileId" type="hidden" id="fileIdInput">
+        <input name="type" type="hidden" id="typeInput">
+    </form>
 
     <script>
         function showContextMenu(event, id, name, type) {
@@ -262,8 +270,14 @@
         }
 
         function deleteFile() {
-            var fileId = document.getElementById('contextMenu').dataset.fileId;
-            // Implement delete functionality using fileId
+            var menu = document.getElementById('contextMenu').dataset;
+
+            // Set fileIdInput value
+            document.getElementById('fileIdInput').value = menu.fileId;
+            document.getElementById('typeInput').value = menu.fileType;
+            // Submit the form
+            document.getElementById('deleteForm').submit();
+
         }
     </script>
 
