--- a/Ethereal Cloud/Pages/Bin.cshtml
+++ b/Ethereal Cloud/Pages/Bin.cshtml
@@ -8,8 +8,9 @@
 
 <!-- File explorer -->
 <div id="file-explorer" class="row mt-3">
+
     <!-- Files Box -->
-    <div id="filebox" class="col-lg-11 col-md-10 col-sm-10 align-content-center">
+    <div id="filebox" class="col-lg-12 col-md-12 col-sm-12 h-100">
         <div id="scrollbox" class="row">
             @if (Model.DisplayList.Count > 0)
             {
@@ -35,7 +36,6 @@
 </div>
 
 @{
-
     string GetImageForFileType(string fileType)
     {
         //looks at files Mime type and gets appropriate image
@@ -61,4 +61,3 @@
         }
     }
 }
-
