--- a/Ethereal Cloud/wwwroot/css/Bin.css
+++ b/Ethereal Cloud/wwwroot/css/Bin.css
@@ -1,9 +1,20 @@
+/* This is where all the files are contained */
+
 #file-explorer {
     padding: 0px;
     justify-content: center;
 }
 
-/* This is where all the uploaded files are contained */
+#filebox {
+    height: 40vh;
+    background: #f2f2f2;
+    border: solid;
+    border-color: #808080;
+    border-radius: 20px;
+    padding: 0px;
+    overflow: hidden;
+}
+
 #scrollbox {
     margin: 0px;
     width: 100%;
@@ -15,13 +26,41 @@
     text-align: center;
 }
 
-/* This is where the scrollbox is contained */
-#filebox {
-    height: 50vh;
-    background: #f2f2f2;
-    border: solid;
-    border-color: #808080;
-    border-radius: 20px;
-    padding: 0px;
-    overflow: hidden;
+
+/* Everything inside the containers for the files (img and file name) */
+#uploaded-files {
+    width: 120px;
+    height: fit-content;
+    padding: 5px;
+    margin: 5px;
 }
+
+    #uploaded-files img {
+        width: 100%;
+        height: auto;
+        margin-bottom: 5px;
+    }
+
+    #uploaded-files p {
+        text-align: center;
+        text-decoration: none;
+        color: black;
+        margin: 0px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        text-decoration: none;
+    }
+
+/* Displays if there are no files */
+.no-files {
+    display: grid;
+    justify-content: center;
+    height: 100%;
+    align-content: center;
+}
+
+    .no-files img {
+        width: 150px;
+        height: auto;
+    }
