Improved account page css

--- a/Ethereal Cloud/Pages/Account.cshtml
+++ b/Ethereal Cloud/Pages/Account.cshtml
@@ -44,13 +44,13 @@
                     <button type="submit" id="login-btn" class="btn btn-primary">Change Password</button>
                 </div>
             </form>
-        </div>        
+        </div>
     </div>
 
     <div class="logout">
         <h2><strong>Sign out of your account?</strong></h2>
         <form asp-page-handler="Logout" method="post">
-            <div class="logout-button">
+            <div class="mb-3 justify-content-center">
                 <button type="submit" id="logout-btn" class="btn btn-primary">Logout here!</button>
             </div>
         </form>
