--- a/Ethereal Cloud/wwwroot/css/Bin.css
+++ b/Ethereal Cloud/wwwroot/css/Bin.css
@@ -52,6 +52,22 @@
         text-decoration: none;
     }
 
+.file-hover {
+    display: grid;
+}
+
+    .file-hover a {
+        text-decoration: none;
+        color: black;
+    }
+
+    .file-hover:hover {
+        background-color: rgb(203 187 226 / 30%);
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition: box-shadow 0.3s ease;
+    }
+
 /* Displays if there are no files */
 .no-files {
     display: grid;
@@ -63,4 +79,25 @@
     .no-files img {
         width: 150px;
         height: auto;
+    }
+
+/* Drop down menu when selecting files/folders: */
+.dropdown {
+    position: absolute;
+    display: none;
+    background-color: #f9f9f9;
+    min-width: 120px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-item {
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    cursor: pointer;
+}
+
+    .dropdown-item:hover {
+        background-color: #f1f1f1;
     }
