--- a/Ethereal Cloud/wwwroot/css/Login.css
+++ b/Ethereal Cloud/wwwroot/css/Login.css
@@ -110,3 +110,49 @@ h2 {
         width: 90%;
     }
 }
+
+.password-strength-popup {
+    background-color: #f8d7da; /* Red background for error */
+    color: #721c24; /* Dark red text color */
+    padding: 5px;
+    border-radius: 4px;
+    font-size: 12px;
+    display: none; /* Initially hidden */
+    z-index: 1;
+}
+
+.password-strength-text {
+    font-weight: bold;
+}
+
+.password-strength-indicator {
+    width: 100%;
+    height: 20px;
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+.strength-weak {
+    width: 10%;
+    height: 100%;
+    background-color: #ff6666;
+}
+
+.strength-moderate {
+    width: 40%;
+    height: 100%;
+    background-color: #ffa366;
+}
+
+.strength-strong {
+    width: 60%;
+    height: 100%;
+    background-color: #ffcc66;
+}
+
+.strength-very-strong {
+    width: 100%;
+    height: 100%;
+    background-color: #13ba00;
+}
