Bug fix: Username or email can be used for login

--- a/Ethereal Cloud/Pages/Login.cshtml
+++ b/Ethereal Cloud/Pages/Login.cshtml
@@ -43,7 +43,7 @@
                 <!-- Username field -->
                 <div class="form-floating">
                     <input asp-for="loginDetails.UsernameOrEmail" class="form-control" placeholder=" ">
-                    <label for="email">Email</label>
+                    <label for="email">Username or Email</label>
                 </div>
                 <div class="error-text">
                     <span asp-validation-for="loginDetails.UsernameOrEmail" class="text-danger"></span>
