Bug fix: Background colour is now slightly darker

--- a/Ethereal Cloud/wwwroot/css/Login.css
+++ b/Ethereal Cloud/wwwroot/css/Login.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-color: #dfcffb;
+    background-color: #9877c5;
     color: black;
     margin-bottom: 20px;
     margin-top: 20px;
