Added logo to tab (instead of default razer icon)

--- a/Ethereal Cloud/Pages/Shared/_Layout.cshtml
+++ b/Ethereal Cloud/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="/css/Site.css" asp-append-version="true">
     <link rel="stylesheet" href="/css/Normalise.css" asp-append-version="true">
+    <link rel="icon" type="image/x-icon" href="~/images/Logo.png" />
     <title>@ViewBag.Title</title>
 </head>
 
