--- a/Ethereal Cloud/Pages/Login.cshtml
+++ b/Ethereal Cloud/Pages/Login.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/Site.css" asp-append-version="true">
     <link rel="stylesheet" href="/css/Login.css" asp-append-version="true">
     <link rel="stylesheet" href="/css/Normalise.css" asp-append-version="true">
+    <link rel="icon" type="image/x-icon" href="~/images/Logo.png" />
     <title>Login</title>
     Layout = null;
 
